--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
       <artifactId>converter-gson</artifactId>
       <version>2.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.8.11.2</version>
+    </dependency>
   </dependencies>
 </project>
