--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,10 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.8.11.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.7</version>
+    </dependency>
   </dependencies>
 </project>
