--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
       <artifactId>gson</artifactId>
       <version>2.7</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.21</version>
+    </dependency>
   </dependencies>
 </project>
