--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     listen       80;
     root         /;
 
-    location /movies.json {
+    location ~ ^/api {
       proxy_pass http://127.0.0.1:4567;
     }
 
